<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="#FFFFFF"
	android:paddingTop="50dip"
	android:paddingLeft="25dip"
	android:paddingRight="25dip"
    >
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="25dip"
		android:layout_alignParentTop="true"
		android:id="@+id/layout_start"
		>
		<!--TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/start_str"
			android:textColor="#000000"
			/-->
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical"
		>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/choose_str"
				android:textColor="#000000"
				/>
			<TextView
				android:id="@+id/text_transport"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="#000000"
				android:text="none"
				/>
		</LinearLayout>
		<Spinner
			android:id="@+id/spinner_transport"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:spinnerMode="dropdown"
			android:popupBackground="#4B4B4B"
			android:layout_width="wrap_content"
			/>
		</LinearLayout>
		<EditText
			android:id="@+id/start_place"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="输入您所在的地点"
			android:layout_gravity="center_vertical"
			/>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
			<Button
				android:id="@+id/button_findby2d"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/button_findby2d_text"
				android:layout_weight="1"
			/>
			<Button
				android:id="@+id/button_findbyvoice_start"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/button_findbyvoice_text"
				android:layout_weight="1"
			/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/layout_start"
		>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/end_str"
			android:textColor="#000000"
			/>
		<EditText
			android:id="@+id/end_place"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="输入您的目的地"
		/>
		<Button
			android:id="@+id/button_findbyvoice_end"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/button_findbyvoice_text"
		/>
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		>
		<Button
			android:id="@+id/button_menu"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/button_menu_text"
			android:layout_weight="1"
		/>
		<Button
			android:id="@+id/button_search"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/button_search_text"
			android:layout_weight="1"
		/>
	</LinearLayout>
</RelativeLayout>

